# csf_backend

./: .env.example  .gitignore  CLAUDE.md  create_sample_waivers.py  csf-backend.service  docker-compose.yml  main.py  nginx-csf.conf  pyproject.toml  requirements.txt  wsgi.py
.claude/tasks/: api_example_payloads.md  context_session_1.md  context_session_2.md  email_automation_implementation.md  encryption_setup_guide.md  figma_design_analysis.md  frontend_installment_api_guide.md  implementation_plan_engagement_platform.md  installment_endpoints_documentation.md  milestone_1_plan.md  milestone_2_plan.md  milestone_3_clarification_questions.md  milestone_3_plan.md  (+6 more)
alembic/: env.py
api/: deps.py  router.py
core/: config.py  logging.py
docs/: CLIENT_QUESTIONNAIRE.md  CLIENT_RESPONSES_ANALYSIS.md  COLORFUL_LOGGER_GUIDE.md  CURRENT_SYSTEM_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  PAYMENT_OPTIONS_GUIDE.md  PAYMENT_OPTIONS_IMPLEMENTATION.md  PERFORMANCE_GUIDE.md  PROGRESS_UPDATE.md  QUICK_REQUIREMENTS_CHECKLIST.md  SESSION_CONTINUATION_REPORT.md  SUBSCRIPTION_BILLING_GUIDE.md  SUBSCRIPTION_IMPLEMENTATION_SUMMARY.md
project_knowledge/: CSF_6Week_Budget_Plan_Updated_Formatted.txt
scripts/: demo_colorful_logger.py  migrate_postgres_to_sqlite.py  seed_data.py  seed_database.py  seed_waivers.py
tests/: conftest.py  test_attendance.py  test_auth.py  test_badges.py  test_children.py  test_classes.py  test_discounts.py  test_events.py  test_installments.py  test_orders.py  test_photos.py  test_stripe_products.py  test_subscriptions.py  test_users.py  test_waivers.py
(+137 files in other folders)
